# whisper-alsa

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  capture.cpp  capture.hpp  config.hpp  debian-packages.sh  log.cpp  log.hpp  main.cpp  transcriber.cpp  transcriber.hpp  utils.hpp  whisper.cpp  whisper.hpp
